Using Basic Technologies/assets/css/style.css
/* CSS Boilerplate Code */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "PT Sans", sans-serif;
    font-weight: 400;
    font-style: normal;
}

/* Extra Important CSS Code */
body{
    overflow-x: hidden;
}

main h1{
    color: #973131;
    text-shadow: 1px 1px 4px #660909;
}
p{
    font-family: "PT Sans", sans-serif;
    font-weight: 400;
    font-style: italic;
}

/* Scroller Type */
body{
    scrollbar-width: none;
}
body::-webkit-scrollbar{
    display: none;
}


/* Header */
header{
    position: sticky;
    top: 0;
}

header>nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1A5319;
    padding: 0.5%;
}
header .nav-logo{
    color: white;
    font-weight: bolder;
    font-family: "PT Sans", sans-serif;
    font-weight: bolder;
    font-size: larger;
    font-style: normal;
}
header a{
    text-decoration: none;
    font-weight: bolder;
    color: aliceblue;
    margin: 10px;
}

header a:hover{
    color: #d0c7d0;
}

header a>button{
    border: none;
    border-radius: 10px;
    padding: 5px;
    padding-left: 10px;
    padding-right: 10px;
    font-weight: bolder;
    color: rgba(9, 90, 47, 0.795);
    background-color: whitesmoke;
    font-size: large;
    cursor: pointer;
}

header a>button:hover{
    background-color: #989798;
    color: whitesmoke;
}

@media only screen and (max-width : 780px){
    header>nav{
        height: 350px;
        flex-direction: column;
        
    }
    header .nav-links{
        display: flex;
        flex-direction: column;
    }
}


/* Main */

/* Landing Page section */
.landing-section{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: 100vh;
    grid-template-areas: "landing-item1 landing-item1 landing-item1"
                        
                        ;
    /* padding-top: 50px; */

}

.landing-item1{
    grid-area: landing-item1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 100px;
    padding-top: 50px;
    font-size: 2rem;
    gap: 15px;

}

.landing-item1>img{
    /* margin-right:100px ; */
    height: 400px;
    width: 400px;
}

.landing-item1>p{
    width: 45%;
    text-align: center;
    font-size: 2rem;
}

@media only screen and (max-width :780px){
    .landing-section{
        grid-template-columns: 1fr;
        grid-area: landing-item1;
    }
    .landing-section p{
        width:90%;
    }
    .landing-item1>img{
        padding: 50px;
        height: 400px;
        width: 400px;
        text-align: center;
    }
    .landing-item1>h1{
        text-align: center;
    }
}

/* .landing.item2{
    grid-area: hero-item2;

} */


/* Mission Section */
.mission-section{
    display: grid;
    /* height: 100vh; */
    grid-template-columns: 0.5 1fr 1fr;
    grid-template-areas: "mission-item1 mission-item2 mission-item2";
    background-color: #66cc991e;
    height: 100vh;
}

.mission-item1{
    grid-area: mission-item1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 20px;

}


.mission-item2{
    grid-area: mission-item2;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 1.5rem;
    padding: 20px;
}
.mission-item2>p{
    text-align: center;
    font-size: 1.5rem;
}

@media only screen and (max-width:780px){
    .mission-section{
        grid-template-columns: 1fr;
        grid-template-rows: 1fr 2fr;
        grid-template-areas: "mission-item1"
                            "mission-item2"; 
        height: fit-content;
        width: 100vw;
        gap: 0;
        font-size: 0.5rem;
    }
    .mission-item1{
        display: flex;
        /* justify-content: center; */
        align-items: center;
    }
    .mission-item1>img{
        height: 400px;
        width: 400px;
        /* padding: 0; */
        
        /* margin-bottom: 0; */
    }
    .mission-section>p{
        font-size: 0.1em;
        width: 70%;
        /* padding: 20px; */
    }
    .mission-item2{
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        /* flex-wrap: wrap; */
    }

}

/* @media screen and max{
    
} */

/* about us Section */






/* Footer */

